extra-test/phase1/tmp_test_1_s03.out
extra-test/phase1//test_1_s03.spl:4:12: [31merror:[0m invalid form of octal-form character [[31mA[0m]
extra-test/phase1//test_1_s03.spl:5:9: [31merror:[0m identifier name cannot start with digits [[31mA[0m]
extra-test/phase1//test_1_s03.spl:7:13: [31merror:[0m hexadecimal integer cannot start with 0 [[31mA[0m]
extra-test/phase1//test_1_s03.spl:9:13: [31merror:[0m decimal integer cannot start with 0 [[31mA[0m]
extra-test/phase1//test_1_s03.spl:1:5: [31merror:[0m invalid function body [[31mB[0m]
       4 |    char c=[31m'\xr0'[0m;
         |           [31m^~~~~~[0m
       5 |    int [31m2_A[0m=3;
         |        [31m^~~[0m
       7 |    int e = [31m0x023456[0m;
         |            [31m^~~~~~~~[0m
       9 |    int g = [31m0023[0m;
         |            [31m^~~~[0m
       1 |int [31mtest()[0m 
         |    [31m^~~~~~[0m
